Sun May 27 14:04:34 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/query.h: Use "Internal" instead of "Query::Internal"
	  in constructor prototype argument list for consistency with other
	  cosntructors, and so this constructor gets ignored by SWIG.

Sun May 27 07:38:56 GMT 2012  Olly Betts <olly@survex.com>

	* exception_data.pm: Fix typo to fix warning and so that XAPIAN_NOTHROW
	  on a method will work.

Sun May 27 01:43:30 GMT 2012  Olly Betts <olly@survex.com>

	* exception_data.pm,include/Makefile.mk,include/xapian.h,
	  include/xapian/attributes.h,include/xapian/unicode.h: Add
	  XAPIAN_CONST_FUNCTION, XAPIAN_PURE_FUNCTION, and XAPIAN_NOTHROW
	  macros for marking functions and methods with those attributes.
	  (tickets #151, #454)

Fri May 25 06:42:35 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/weight.h: Fix documentation comment typo ("k1" ->
	  "k").

Fri May 25 05:44:05 GMT 2012  Olly Betts <olly@survex.com>

	* backends/flint_lock.h: Mark FlintLock::throw_databaselockerror() as
	  XAPIAN_NORETURN.

Thu May 24 12:28:35 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/termgenerator.h,queryparser/termgenerator.cc,
	  queryparser/termgenerator_internal.cc,
	  queryparser/termgenerator_internal.h: Add
	  TermGenerator::set_stemming_strategy() method, with strategies which
	  correspond to those of QueryParser.  Based on patch from Sehaj Singh
	  Kalra, with some tweaks for adding term positions in more cases.
	  (Fixes ticket#563)
	* tests/termgentest.cc: Add test coverage for the new features.

Thu May 24 01:37:31 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h: Add doc comment for stem_strategy
	  typedef.

Wed May 23 11:33:08 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h,queryparser/queryparser.lemony:
	  Add new QueryParser::STEM_ALL_Z stemming strategy, which stems all
	  terms and adds a Z prefix.  (Patch from Sehaj Singh Kalra, fixes
	  ticket#562)